--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <script src="/static/js/jquery.validate.min.js"></script> 
     <script src="/static/js/chart.min.js"></script> 
     <script src="/static/js/front.js"></script>
-	<script src="/static/angularjs/angular.min.js"></script>
+
     <!-- own function -->
     <script src="/static/mmt/common.js" type="text/javascript"></script>
     <script src="/static/mmt/index.js" type="text/javascript"></script>
@@ -44,7 +44,7 @@
 	<!-- Nav -->
 	<nav th:replace="nav :: nav_copy">
 	</nav>
-	
+	<div id="root"> </div>
 	<div class="container mt-2">
 		<div class="row no-gutters justify-content-center align-items-center mt-2 mb-3">
 			<div class="col-sm-8 h-100 indexSlides">
