--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<html id="home" lang="zh" xmlns:th="http://www.thymeleaf.org">
+</html>
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
@@ -6,231 +6,13 @@
 	<meta name="robots" content="all,follow">
 	<title>汽车人才网</title>
 	<link rel="shortcut icon" href="/static/img/favicon.ico">
-	<!-- global stylesheets -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
-	<link rel="stylesheet" href="/static/font-awesome-4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="/static/css/font-icon-style.css">
-	<link rel="stylesheet" href="/static/css/style.default.css" id="theme-stylesheet">
-	<!-- bootstrap -->
-	<link rel="stylesheet" href="/static/bootstrap-4.3.1-dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/static/bootstrap-4.3.1-dist/css/bootstrap-grid.min.css">
-	<link rel="stylesheet" href="/static/bootstrap-4.3.1-dist/css/bootstrap-reboot.min.css">
-	<link rel="stylesheet" href="/static/bootstrap-4.3.1-dist/css/bootstrap-grid.min.css">
-	<!-- Core stylesheets -->
-	
-	<!-- Custom stylesheets -->
-	<link rel="stylesheet" href="/static/css/pages/common.css">
-	<link rel="stylesheet" href="/static/css/pages/index.css">
-	
-	<script src="/static/js/jquery-3.3.1.min.js" type="text/javascript"></script>
-	<script src="/static/js/popper/popper.min.js" type="text/javascript"></script>
-	<script src="/static/bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
-	<script src="/static/bootstrap-4.3.1-dist/js/bootstrap.bundle.min.js"></script>
-	
-    <!--Global Javascript -->
-    <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/popper/popper.min.js"></script>
-    <script src="/static/js/tether.min.js"></script>
-    <script src="/static/js/jquery.cookie.js"></script>
-    <script src="/static/js/jquery.validate.min.js"></script> 
-    <script src="/static/js/chart.min.js"></script> 
-    <script src="/static/js/front.js"></script>
 
-    <!-- own function -->
-    <script src="/static/mmt/common.js" type="text/javascript"></script>
-    <script src="/static/mmt/index.js" type="text/javascript"></script>
 </head>
-<body id="home_body" onload="toshowUserName();getHotJobs();">
+<body id="home_body">
 	<!-- Nav -->
-	<nav th:replace="nav :: nav_copy">
-	</nav>
-	<div id="root"> </div>
-	<div class="container mt-2">
-		<div class="row no-gutters justify-content-center align-items-center mt-2 mb-3">
-			<div class="col-sm-8 h-100 indexSlides">
-				<div id="carouselSlides" class="carousel slide" data-ride="carousel" data-interval="1500">
-				    <ol class="carousel-indicators">
-					    <li data-target="#carouselSlides" data-slide-to="0" class="active"></li>
-					    <li data-target="#carouselSlides" data-slide-to="1"></li>
-					    <li data-target="#carouselSlides" data-slide-to="2"></li>
-				    </ol>
-				  	<div class="carousel-inner">
-					    <div class="carousel-item active">
-					      <img class="d-block img-fluid w-100" src="/static/icons-reference/images/img_nature_wide.jpg" alt="图片一">
-					      <div class="carousel-caption d-none d-sm-block">
-							  <p>图片一的介绍</p>
-						  </div>
-					    </div>
-					    <div class="carousel-item">
-					      <img class="d-block img-fluid w-100" src="/static/icons-reference/images/img_nature_wide.jpg" alt="图片二">
-					      <div class="carousel-caption d-none d-sm-block">
-							  <p>图片二的信息</p>
-						  </div>
-					    </div>
-					    <div class="carousel-item">
-					      <img class="d-block img-fluid w-100" src="/static/icons-reference/images/img_nature_wide.jpg" alt="图片三">
-					      <div class="carousel-caption d-none d-md-block">
-							  <p>图片三的广告</p>
-						  </div>
-					    </div>
-			  		</div>
-				  	<a class="carousel-control-prev" href="#carouselSlides" role="button" data-slide="prev">
-					    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					    <span class="sr-only">后退</span>
-				    </a>
-				    <a class="carousel-control-next" href="#carouselSlides" role="button" data-slide="next">
-					   <span class="carousel-control-next-icon" aria-hidden="true"></span>
-					   <span class="sr-only">前进</span>
-				    </a>
-				</div>
-			</div>
-			<div class="col-sm-4 pt-3 px-3 indexSearch">
-				<h5 class="font-weight-normal mb-3">职位搜索</h5>
-				<form class="mt-3" id="home-search">
-					<div class="from-group mb-2">
-						<label class="sr-only" for="city">城市</label>
-						<input class="form-control rounded-0 city" type="text" id="city" placeholder="请输入城市">
-					</div>
-					<div class="from-group mb-2">
-						<label class="sr-only" for="company">公司</label>
-						<input class="form-control rounded-0 company" type="text" id="company" placeholder="请输入公司">
-					</div>
-					<div class="from-group mb-2">
-						<label class="sr-only" for="position">职位</label>
-						<input class="form-control rounded-0 position" type="text" id="position" placeholder="请输入职位">
-					</div>
-				    <button class="btn btn-block btn-lg text-white align-middle rounded-0 mt-3 searchBtn" type="button" onclick="showUserName()">立即搜索</button>  
-				</form>
-			</div>	
-		</div>
-		<div class="row no-gutters justify-content-between align-items-top my-2 greatJob">
-			<div class="col-sm-6">
-				<a href="#" class="w-100" target="_blank" title="江苏常隆客车有限公司">
-					<img class="img-fluid w-100" src="/static/icons-reference/images/index1.gif">
-				</a>
-			</div>
-			<div class="col-sm-6 pl-2">
-				<a href="#" class="w-100" target="_blank" title="江苏常隆客车有限公司">
-					<img class="img-fluid w-100" src="/static/icons-reference/images/index1.gif">
-				</a>
-			</div>
-		</div>
-		<div class="my-2 niceJob">
-			<a href="#" class="w-100" target="_blank" title="第三届中国汽车产业人力资源峰会2019">
-				<img class="img-fluid w-100" src="/static/icons-reference/images/index2.gif">
-			</a>
-		</div>
-		<div class="row no-gutters my-2 excellentJob">
-			<div class="col-sm-6 excellentJobCol">
-				<div class="card rounded-0 flex-row box-shadow pl-2 py-2">
-				  <a href="#" class="card-link w-40 mr-4" target="_blank" title="江西五十铃汽车有限公司">
-					<img class="card-img-left w-100 h-100" src="/static/icons-reference/images/index3.jpg">
-				  </a>
-				  <div class="card-body ml-5">
-				    <h5 class="card-title">
-				      <a href="#" class="card-link" target="_blank" title="助理服务经理">助理服务经理</a>
-				    </h5>
-				    <p class="recommend_list">
-				        <span class="salary mr-1">15K-20K</span>
-				        <span>经验2年</span>
-				        <span>|</span>
-				        <span>本科</span>
-				        <span>|</span>
-				        <span>南昌市</span>
-				    </p>
-				    <p class="text-white">
-				    	<span class="badge badge-light font-weight-normal border border-secondary p-1">五险一金</span>
-				    	<span class="badge badge-light font-weight-normal border border-secondary p-1">加班补助</span>
-				    	<span class="badge badge-light font-weight-normal border border-secondary p-1">年底双薪</span>
-				    	<span class="badge badge-light font-weight-normal border border-secondary p-1">绩效奖金</span>
-				    </p>
-				  </div>
-				</div>
-			</div>
-			<div class="col-sm-6 excellentJobCol pl-2">
-				<div class="card rounded-0 flex-row box-shadow pl-2 py-2">
-				  <a href="#" class="card-link w-40 mr-4" target="_blank" title="江西五十铃汽车有限公司">
-					<img class="card-img-left w-100 h-100" src="/static/icons-reference/images/index3.jpg">
-				  </a>
-				  <div class="card-body ml-5">
-				    <h5 class="card-title">
-				      <a href="#" class="card-link" target="_blank" title="助理服务经理">助理服务经理</a>
-				    </h5>
-				    <p class="recommend_list">
-				        <span class="salary mr-1">15K-20K</span>
-				        <span>经验2年</span>
-				        <span>|</span>
-				        <span>本科</span>
-				        <span>|</span>
-				        <span>南昌市</span>
-				    </p>
-				    <p class="text-white">
-				    	<span class="badge badge-light font-weight-normal border border-secondary p-1">五险一金</span>
-				    	<span class="badge badge-light font-weight-normal border border-secondary p-1">加班补助</span>
-				    	<span class="badge badge-light font-weight-normal border border-secondary p-1">年底双薪</span>
-				    	<span class="badge badge-light font-weight-normal border border-secondary p-1">绩效奖金</span>
-				    </p>
-				  </div>
-				</div>
-			</div>
-		</div>
-		<div class="my-2 pl-4 pt-3 hotJob">
-			<div class="row ml-2">
-				<div class="col-sm-4">
-					<ul>
-						<li ng-repeat="">
-							<a class="company" href="#" target="_blank" title="深圳市共成投资发展有限公司">深圳市共成投资发展有限公司</a>
-							<a class="position" href="#" target="_blank" title="客服专员">客服专员</a>
-						</li>
-						<li>
-							<a class="company" href="#" target="_blank" title="深圳市共成投资发展有限公司">深圳市共成投资发展有限公司</a>
-							<a class="position" href="#" target="_blank" title="客服专员">客服专员</a>
-						</li>
-						<li>
-							<a class="company" href="#" target="_blank" title="深圳市共成投资发展有限公司">深圳市共成投资发展有限公司</a>
-							<a class="position" href="#" target="_blank" title="客服专员">客服专员</a>
-						</li>
-					</ul>
-				</div>
-				<div class="col-sm-4">
-					<ul>
-						<li ng-repeat="">
-							<a class="company" href="#" target="_blank" title="深圳市共成投资发展有限公司">深圳市共成投资发展有限公司</a>
-							<a class="position" href="#" target="_blank" title="客服专员">客服专员</a>
-						</li>
-						<li>
-							<a class="company" href="#" target="_blank" title="深圳市共成投资发展有限公司">深圳市共成投资发展有限公司</a>
-							<a class="position" href="#" target="_blank" title="客服专员">客服专员</a>
-						</li>
-						<li>
-							<a class="company" href="#" target="_blank" title="深圳市共成投资发展有限公司">深圳市共成投资发展有限公司</a>
-							<a class="position" href="#" target="_blank" title="客服专员">客服专员</a>
-						</li>
-					</ul>
-				</div>
-				<div class="col-sm-4">
-					<ul>
-						<li ng-repeat="">
-							<a class="company" href="#" target="_blank" title="深圳市共成投资发展有限公司">深圳市共成投资发展有限公司</a>
-							<a class="position" href="#" target="_blank" title="客服专员">客服专员</a>
-						</li>
-						<li>
-							<a class="company" href="#" target="_blank" title="深圳市共成投资发展有限公司">深圳市共成投资发展有限公司</a>
-							<a class="position" href="#" target="_blank" title="客服专员">客服专员</a>
-						</li>
-						<li>
-							<a class="company" href="#" target="_blank" title="深圳市共成投资发展有限公司">深圳市共成投资发展有限公司</a>
-							<a class="position" href="#" target="_blank" title="客服专员">客服专员</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
+	<div id="nav"></div>
+	
 
-	<!-- Footer -->
-	<footer th:replace="footer :: footer_copy">
-	</footer>
 </body>
 
 </html>
