--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
 	<link rel="shortcut icon" href="/static/img/favicon.ico">
 
 </head>
-<body id="home_body">
-	<!-- Nav -->
-	<div id="nav"></div>
+<body id="mmt">
 	
-
+	<div id="mmt-nav"></div>
+	<div id="mmt-container"></div>
+	<div id="mmt-footer"></div>
 </body>
 
 </html>
